Development:
  - add prometheus metrics; details in docs/prometheus.md

0.2.0:
  - automatically create initial tables if the database does not contain them
  - add f_canonical, f_target_correct and f_head_correct to t_attestations; NULL if not yet sure
  - add f_canonical to t_blocks to state if a block is canonical (true), non-canonical (false) or not yet sure (NULL)
  - add provider functions to fetch aggregate validator balances
  - add f_aggregation_indices to t_attestations to provide explicit indices for attestations
  - add t_eth1_deposits table to hold data about deposits on the Ethereum 1 chain (N.B. not currently populated)
  - add f_block_1_root and f_block_2_root to t_proposer_slashings table
  - make log level configuration hierarchical; if a log level is not present it will use the next one up the hierarchy
  - add t_chain_spec table, holding the chain specification
  - add t_genesis table, holding the chain genesis information
  - add t_deposits table, holding Ethereum 1 deposits recognized on the beacon chain and provided in the beacon block
  - t_validators table no longer uses '-1' as an indicator for the Ethereum spec value `FAR_FUTURE_EPOCH`, instead it uses NULL
  - add upgrader to update the database schema when changes are made