@@ -1,4 +1,5 @@
 Development:
+  - fix potential crash in blocks handler if database goes away
   - add prometheus metrics; details in docs/prometheus.md
 
 0.2.0:
